--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 </head>
 
-<body class="page-template page-template-page-templates page-template-court-designer page-template-page-templatescourt-designer-php page page-id-548 custom-background custom-background-white custom-font-enabled single-author responsive-menu-slide-left">
+<body style="margin-top:-100px;" class="page-template page-template-page-templates page-template-court-designer page-template-page-templatescourt-designer-php page page-id-548 custom-background custom-background-white custom-font-enabled single-author responsive-menu-slide-left">
     <div id="main" class="wrapper">
       <div id="primary" class="site-content">
         <div id="content" role="main">
